<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="nextDaysForecastPresentation"
            type="com.hugo.fairecast.app.presentation.NextDaysForecastPresentation" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/weatherStateImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/weather_state_image_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:stateImgWithAbbr="@{nextDaysForecastPresentation.weatherStateAbr}"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/temp(nextDaysForecastPresentation.theTemp)}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/weatherStateImg"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/lowTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/low_temp(nextDaysForecastPresentation.minTemp)}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/weatherStateImg"
            app:layout_constraintTop_toBottomOf="@+id/temp"
            tools:text="@string/low_temp" />

        <TextView
            android:id="@+id/highTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/high_temp(nextDaysForecastPresentation.maxTemp)}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/weatherStateImg"
            app:layout_constraintTop_toBottomOf="@+id/lowTemp"
            tools:text="@string/high_temp" />

        <TextView
            android:id="@+id/weatherState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{nextDaysForecastPresentation.weatherState}"
            app:layout_constraintEnd_toEndOf="@+id/weatherStateImg"
            app:layout_constraintStart_toStartOf="@+id/weatherStateImg"
            app:layout_constraintTop_toBottomOf="@+id/weatherStateImg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>