<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="state"
            type="com.hugo.fairecast.app.view.states.ForecastInfoState" />
        <import type="com.hugo.fairecast.app.view.states.ForecastInfoState"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.view.fragments.ForecastInfoFragment">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cityName="@{state}"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="City Name" />

        <ImageView
            android:id="@+id/stateImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/weather_state_image_content_description"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/day"
            app:stateImg="@{state}"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/weatherState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Light Rain"
            app:weatherState="@{state}"
            app:layout_constraintEnd_toEndOf="@+id/stateImage"
            app:layout_constraintStart_toStartOf="@+id/stateImage"
            app:layout_constraintTop_toBottomOf="@+id/stateImage" />

        <TextView
            android:id="@+id/lowTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/weatherState"
            app:minTemp="@{state}"
            tools:text="L. 11º" />

        <TextView
            android:id="@+id/highTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lowTemp"
            app:layout_constraintTop_toBottomOf="@+id/weatherState"
            app:maxTemp="@{state}"
            tools:text="H. 17º" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/stateImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/stateImage"
            app:layout_constraintTop_toTopOf="@+id/stateImage"
            app:temp="@{state}"
            tools:text="16º" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="226dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:visibility="@{state instanceof ForecastInfoState.Error ? View.VISIBLE : View.GONE}"
            errorMsg="@{state}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highTemp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="178dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weatherNextDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:items="@{state}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextDaysTxt" />

        <TextView
            android:id="@+id/nextDaysTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/next_days_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowTemp" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/today"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/stateImage"
            app:layout_constraintStart_toStartOf="@+id/stateImage"
            app:layout_constraintTop_toBottomOf="@+id/cityName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>